# pickup

./: IMPROVEMENTS.md  README.md  guardrails.yaml  improvements.md  skill.yaml
brain/: config.py  config.yaml  main.py  models.py  requirements.txt  store.py  writer.py
bridge/: package-lock.json  package.json
bridge/src/: index.ts  store.ts  tools.ts
bridge/src/integrations/: obsidian.ts
core/: Cargo.toml
core/src/: harvester.rs  ipc.rs  main.rs  models.rs  watcher.rs
scripts/: git-hook.sh  install.sh  shell-plugin.zsh
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  BriefViewer.tsx  CheckpointList.tsx  index.css  types.ts
