[package]
name        = "pickup-core"
version     = "0.1.0"
edition     = "2021"
description = "Pickup — always-on cognitive re-entry daemon (Rust)"
authors     = ["Pickup"]

[[bin]]
name = "pickup-core"
path = "src/main.rs"

[dependencies]
# Async runtime — the backbone of the daemon
tokio            = { version = "1",   features = ["full"] }

# Serialization — all IPC is newline-delimited JSON
serde            = { version = "1",   features = ["derive"] }
serde_json       = "1"

# Cross-platform active window detection
active-win-pos-rs = "0.8"

# UUIDs for checkpoint IDs (not used in core, but shared contract)
# Pin to 1.6.x — 1.7+ pulls getrandom 0.4 which requires edition2024 (Rust ≥ 1.85)
uuid             = { version = "=1.6.1", features = ["v4"] }

# Timestamps — all ISO 8601 UTC
chrono           = { version = "0.4", features = ["serde"] }

# Structured logging
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Ergonomic error types
# Pin thiserror to 1.0.x — 2.x requires edition2024
thiserror        = "=1.0.69"

# File-system watching (Phase 1 harvester; extended in Phase 3 git hooks)
notify           = "6"

[profile.release]
# Optimise for minimum binary size and memory footprint
opt-level = "z"
lto       = true
strip     = true
